# sebuf

./: .bufignore  .gitignore  .golangci.yml  .goreleaser.yml  .testcoverage.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACT_DRIVEN_GATEWAY.md  CONTRIBUTING.md  Cargo.toml  Makefile  PY_CLIENT_HANDOFF.md  README.md  VERIFICATION-REPORT.md  go.mod  go.sum  main.go
.claude/: settings.local.json
.claude/commands/: commit-and-push.md  create-issue.md  update-docs.md
.github/workflows/: ci.yml  create-tag.yml  proto.yml  release.yml
.planning/: LABELS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
authv1/: login.pb.go  login.proto  login_helpers.pb.go  main_binding.go  main_config.go  main_generated.go  service.pb.go  service.proto  service_helpers.pb.go
cmd/protoc-gen-csharp-http/: main.go
cmd/protoc-gen-go-client/: main.go
cmd/protoc-gen-go-http/: main.go
cmd/protoc-gen-go-oneof-helper/: main.go
cmd/protoc-gen-go-whatif/: main.go
cmd/protoc-gen-krakend/: main.go
cmd/protoc-gen-openapiv3/: main.go
cmd/protoc-gen-py-client/: main.go
cmd/protoc-gen-swift-http/: main.go
cmd/protoc-gen-swift-oneof-helper/: main.go
cmd/protoc-gen-ts-client/: main.go
cmd/protoc-gen-ts-server/: main.go
cmd/protoc_gen_go_helpers/: main.go
coverage/: coverage.html  coverage.json
docker/: Dockerfile.oneof
docs/: architecture.md  ci-cd.md  client-generation.md  csharp-generation.md  getting-started.md  http-generation.md  json-protobuf-compatibility.md  oneof-helpers.md  openapi-generation.md  protoc-gen-go-whatif.md  python-generation.md  typescript-client-fetch-vs-axios.md  validation.md  whatif-usage-guide.md
docs/examples/: README.md
examples/csharp-contracts-demo/: Makefile  README.md
examples/enum-encoding/: Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go  main_test.go
examples/enum-params/: Makefile  buf.gen.yaml  go.mod  go.sum  main.go  test_enum_params.sh
examples/error-handler/: .gitignore  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  main.go
examples/forward-compatibility/: README.md  buf.gen.yaml  go.mod  main.go
examples/krakend-gateway/: .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  main.go
examples/market-data-unwrap/: .gitignore  Makefile  README.md  buf.gen.yaml  client_example.go  discard_unknown_test.go  go.mod  go.sum  main.go  unwrap_quick_check_test.go  unwrap_shapes_test.go
examples/market-data-unwrap-same-pkg/: README.md  buf.gen.yaml  go.mod  go.sum
examples/marshal-options/: .gitignore  Makefile  README.md  buf.gen.yaml  go.mod  main.go
examples/multi-service-api/: Makefile  README.md  buf.gen.yaml  go.mod  main.go
examples/nested-resources/: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  main.go
examples/python-client-demo/: .gitignore  Makefile  README.md  buf.gen.yaml  go.mod  main.go
examples/python-encoding-demo/: .gitignore  Makefile  buf.gen.yaml  go.mod  main.go
examples/simple-api/: go.mod  (+9 more)
http/: annotations.pb.go  errors.pb.go  errors_impl.go  errors_impl_test.go  headers.pb.go
krakend/: krakend.pb.go
proto/: buf.yaml
rust/: README.md
rust/protoc-gen-rust-http/: Cargo.toml
rust/protoc-gen-rust-http/src/: annotations.rs  generator.rs  main.rs
rust/protoc-gen-rust-http/tests/: integration_test.rs
rust/protoc-gen-rust-oneof-helper/: Cargo.toml
rust/protoc-gen-rust-oneof-helper/src/: generator.rs  main.rs
rust/protoc-gen-rust-oneof-helper/tests/: integration_test.rs
rust/protoc-gen-rust-openapiv3/: Cargo.toml
rust/protoc-gen-rust-openapiv3/src/: generator.rs  main.rs  schema.rs
rust/protoc-gen-rust-openapiv3/tests/: integration_test.rs
rust/sebuf-core/: Cargo.toml
rust/sebuf-core/src/: codegen.rs  lib.rs  parser.rs  plugin.rs
rust/sebuf-core/src/codegen/: tests.rs
rust/sebuf-core/src/parser/: tests.rs
scripts/: run_tests.sh  test_rust.sh
swift/: Package.resolved  Package.swift
test/: simple.proto  test_server.go
validate/: validate.pb.go
(+970 files in other folders)
