[workspace]
members = [
    "rust/protoc-gen-rust-oneof-helper",
    "rust/protoc-gen-rust-http",
    "rust/protoc-gen-rust-openapiv3",
    "rust/sebuf-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sebastien Melki"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/SebastienMelki/sebuf"
homepage = "https://github.com/SebastienMelki/sebuf"

[workspace.dependencies]
prost = "0.13"
prost-types = "0.13"
protobuf = "3.6"
bytes = "1.8"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
heck = "0.5"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
prettyplease = "0.2"