[package]
name = "protoc-gen-rust-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Protobuf plugin to generate Rust HTTP handlers from service definitions"

[[bin]]
name = "protoc-gen-rust-http"
path = "src/main.rs"

[dependencies]
sebuf-core = { path = "../sebuf-core" }
prost = { workspace = true }
prost-types = { workspace = true }
protobuf = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
heck = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
syn = { version = "2.0", features = ["full"] }