[package]
name = "protoc-gen-rust-openapiv3"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Protobuf plugin to generate OpenAPI v3.1 specifications from service definitions"

[[bin]]
name = "protoc-gen-rust-openapiv3"
path = "src/main.rs"

[dependencies]
sebuf-core = { path = "../sebuf-core" }
prost = { workspace = true }
prost-types = { workspace = true }
protobuf = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
syn = { version = "2.0", features = ["full"] }